<resources>
    <string name="app_name">IotApplication</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ledColor" translatable="false">红灯</string>
    <string name="ledControl" translatable="false">灯具控制</string>
    <string name="red_led">客厅(红灯)</string>
    <string name="open">开</string>
    <string name="close">关</string>
    <string name="green_led">卧室(绿灯)</string>
    <string name="temHum">温湿度检测</string>
    <string name="startMeasure">开始检测</string>
    <string name="voiceControl">语音控制</string>
    <string name="voiceManual">按住键说出指令即可实现对智能家具的控制，比如打开红灯、关闭红灯、打开绿灯、关闭绿灯。</string>
    <string name="speak">按键说话</string>
    <string name="voiceResult">识别结果:</string>

</resources>