<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ledControl"
            android:textSize="@dimen/titleSize"/>
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize"
                android:text="@string/red_led"
                />

            <RadioGroup
                android:id="@+id/redChooseGroup"
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/redLedButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/open" />

                <RadioButton
                    android:layout_marginLeft="40dp"
                    android:id="@+id/redLedButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/close" />
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize"
                android:text="@string/green_led"
                />

            <RadioGroup
                android:id="@+id/greenChooseGroup"
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/greenLedButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/open" />

                <RadioButton
                    android:layout_marginLeft="40dp"
                    android:id="@+id/greenLedButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/close" />
            </RadioGroup>
        </LinearLayout>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temHum"
            android:textSize="@dimen/titleSize"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <cn.caoqiang.iot.button.FButton
                android:id="@+id/measure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/startMeasure"
                android:textAllCaps="false"
                android:layout_marginLeft="20dp"
                fbutton:buttonColor="@color/fbutton_color_belize_hole"
                fbutton:shadowColor="@color/fbutton_color_wet_asphalt"
                fbutton:shadowEnabled="true"
                fbutton:shadowHeight="5dp"
                fbutton:cornerRadius="5dp"
                />
            <TextView
                android:id="@+id/measure_result"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize"
                android:text="温度和湿度"
                />
        </LinearLayout>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voiceControl"
            android:textSize="@dimen/titleSize"/>
        <TextView
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:text="@string/voiceManual"/>
        <cn.caoqiang.iot.button.FButton
            android:layout_gravity="center_horizontal"
            android:id="@+id/speak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speak"
            android:textAllCaps="false"
            fbutton:buttonColor="@color/fbutton_color_belize_hole"
            fbutton:shadowColor="@color/fbutton_color_wet_asphalt"
            fbutton:shadowEnabled="true"
            fbutton:shadowHeight="5dp"
            fbutton:cornerRadius="5dp"
            />
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voiceResult"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/voiceResult"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>


    </LinearLayout>

</RelativeLayout>


